--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,10 +9,10 @@ on:
   #schedule:    
    # - cron: "*/5 * * * *"
 jobs:  
-  build:  
+  build_pr:  
     name: Run Web App using
     runs-on: ubuntu-latest
-    if: (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
+    if: (github.event_name == 'pull_request' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
     
     container:
       image: openjdk:8-jdk-slim
@@ -21,8 +21,21 @@ jobs:
         
         uses: actions/checkout@v1
       - run: echo "hello" 
+  
+  build_push:  
+    name: Run Web App using
+    runs-on: ubuntu-latest
+    if: (github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
+    
+    container:
+      image: openjdk:8-jdk-slim
+    steps:
+      - name: Echo 
+        
+        uses: actions/checkout@v1
+      - run: echo "hello"
       
-  testing:
+  testing_pr:
     needs: build
     runs-on: ubuntu-latest
     if: (github.event_name == 'pull_request' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
@@ -33,8 +46,15 @@ jobs:
       - name: path 
         uses: actions/checkout@v1
       - run: pwd
-      
-      
-      
-      
-      
+  
+  testing_push:
+    needs: build
+    runs-on: ubuntu-latest
+    if: (github.event_name == 'workflow_dispatch'  || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
+
+    container:
+      image: openjdk:8-jdk-slim
+    steps:
+      - name: path 
+        uses: actions/checkout@v1
+      - run: pwd
