--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -36,7 +36,7 @@ jobs:
       - run: echo "hello"
       
   testing_pr:
-    needs: build
+    needs: build_pr
     runs-on: ubuntu-latest
     if: (github.event_name == 'pull_request' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
 
@@ -48,7 +48,7 @@ jobs:
       - run: pwd
   
   testing_push:
-    needs: build
+    needs: build_push
     runs-on: ubuntu-latest
     if: (github.event_name == 'workflow_dispatch'  || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
 
