--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,7 +12,7 @@ jobs:
   build_pr:  
     name: Run Web App using
     runs-on: ubuntu-latest
-    if: (github.event_name == 'pull_request' || github.event_name != 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
+    if: (github.event_name == 'pull_request' || github.event_name !== 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
     
     container:
       image: openjdk:8-jdk-slim
@@ -23,7 +23,7 @@ jobs:
       - run: echo "hello" 
   
   build_push:  
-    name: Run Web App using
+    name: Run Web App using 
     runs-on: ubuntu-latest
     if: (github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
     
@@ -38,7 +38,7 @@ jobs:
   testing_pr:
     needs: build_pr
     runs-on: ubuntu-latest
-    if: (github.event_name == 'pull_request' || github.event_name != 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
+    if: (github.event_name == 'pull_request' || github.event_name !== 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
 
     container:
       image: openjdk:8-jdk-slim
