--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,8 +3,8 @@ on:
   
   push:
     branches: [pr,test] 
-  pull_request:
-    branches: [pr, test ]  
+  # pull_request:
+  #   branches: [pr, test ]  
   workflow_dispatch:   
   #schedule:    
    # - cron: "*/5 * * * *"
@@ -12,7 +12,7 @@ jobs:
   build_pr:  
     name: Run Web App using
     runs-on: ubuntu-latest
-    if: (github.event_name == 'pull_request' || github.event_name !== 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
+    if: (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
     
     container:
       image: openjdk:8-jdk-slim
@@ -21,8 +21,20 @@ jobs:
         
         uses: actions/checkout@v1
       - run: echo "hello" 
-  
-  build_push:  
+      
+  testing_pr:
+    needs: build_pr
+    runs-on: ubuntu-latest
+    if: (github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
+
+    container:
+      image: openjdk:8-jdk-slim
+    steps:
+      - name: path 
+        uses: actions/checkout@v1
+      - run: pwd
+
+    build_push:  
     name: Run Web App using 
     runs-on: ubuntu-latest
     if: (github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
@@ -34,19 +46,7 @@ jobs:
         
         uses: actions/checkout@v1
       - run: echo "hello"
-      
-  testing_pr:
-    needs: build_pr
-    runs-on: ubuntu-latest
-    if: (github.event_name == 'pull_request' || github.event_name !== 'workflow_dispatch' || github.ref == 'refs/heads/pr' || github.ref == 'refs/heads/test')
 
-    container:
-      image: openjdk:8-jdk-slim
-    steps:
-      - name: path 
-        uses: actions/checkout@v1
-      - run: pwd
-  
   testing_push:
     needs: build_push
     runs-on: ubuntu-latest
