--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,5 +16,5 @@ jobs:
       - uses: actions/checkout@v1
       - run: apt update -y
       - run: apt install git -y
-      - run: git clone -b $CURRENT_BRANCH https://github.com/Npraveenreddy/front-end2.git
+      - run: git clone --branch $CURRENT_BRANCH https://github.com/Npraveenreddy/front-end2.git
       - run: ls -lrt
