--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest  
     container:
       image: openjdk:8-jdk-slim 
-    env:
-      BRANCH_NAME: $(git rev-parse --abbrev-ref HEAD)
+    # env:
+    #   BRANCH_NAME: ${{ github.ref }}
     steps:
       - uses: actions/checkout@v1
+      - run: BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)
       - run: echo $BRANCH_NAME
       # - run: apt update -y
       # - run: apt install git -y
