--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,6 +16,7 @@ jobs:
       - run: apt update -y
       - run: apt install git -y
       - run: BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)
+      - run: echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
       - run: echo $BRANCH_NAME
       
       # - run: git clone --branch $BRANCH_NAME https://github.com/Npraveenreddy/front-end2.git
