--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -14,6 +14,8 @@ jobs:
         run: echo "BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
       - name: Print branch name
         run: echo $BRANCH_NAME
+        run: git clone --branch $BRANCH_NAME https://github.com/Npraveenreddy/front-end2.git
+        run: ls -lrt
 
 
 
