--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,22 +1,36 @@
 name: My Workflow
 
 on:
-  push:
+  pull_request:
     branches:
       - test
 
 jobs:
-  my-job:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set branch name
-        run: echo "BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
-      - name: Print branch name
-        run: |
-          echo $BRANCH_NAME
-          git clone --branch $BRANCH_NAME git@github.com:Npraveenreddy/testing-pr.git
-          ls -lrt
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Print pull request number
+        run: echo "Pull Request number is ${{ github.event.number }}"
+
+# on:
+#   push:
+#     branches:
+#       - test
+
+# jobs:
+#   my-job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Set branch name
+#         run: echo "BRANCH_NAME=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
+#       - name: Print branch name
+#         run: |
+#           echo $BRANCH_NAME
+#           git clone --branch $BRANCH_NAME git@github.com:Npraveenreddy/testing-pr.git
+#           ls -lrt
 
 
 
