--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,9 +1,9 @@
 name: My Workflow
 
 on:
-  push:
-    branches:
-      - test
+  # push:
+  #   branches:
+  #     - test
   pull_request:
     branches:
       - test
