--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Print pull request number
-        run: echo "Pull Request number is ${{ github.event.number }}"
-
+        run: echo "Pull Request number is ${{ github.event.pull_request.number }}"
+        
 # on:
 #   push:
 #     branches:
